...
    override func viewDidLoad()
    {
        super.viewDidLoad()

        // Do any additional setup after loading the view.
        
        self.title = "Album Details";
        
        service = PhotoAlbumService();
    }
    
    override func viewDidAppear(_ animated: Bool)
    {
...
