...

    override func viewDidLoad()
    {
        super.viewDidLoad()
        // Do any additional setup after loading the view, typically from a nib.
        
        self.title = "Albums";
        
        tableView?.estimatedRowHeight = 100.0; // put max you expect here.
        tableView?.rowHeight = UITableViewAutomaticDimension;
        
        actInd = UIActivityIndicatorView.init(activityIndicatorStyle: UIActivityIndicatorViewStyle.whiteLarge);
        actInd?.hidesWhenStopped = true;
...
